@@ -1,6 +1,5 @@
 import org.apache.spark.sql.{DataFrame, SparkSession}
 import org.apache.spark.sql.functions._
-case class GPSData(user_id: Long, latitude: Double, longitude: Double, timestamp: String)
 
 object spark_streaming {
 
@@ -8,16 +7,28 @@ object spark_streaming {
     val spark = SparkSession.builder()
       .appName("Kafka Spark Consumer")
       .master("local[*]")
+      .config("spark.driver.extraJavaOptions", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
       .getOrCreate()
 
     import spark.implicits._
 
     spark.sparkContext.setLogLevel("ERROR")
+    // Read forbidden areas from PostgreSQL
+    val forbiddenAreasDF = spark.read
+      .format("jdbc")
+      .option("url", "jdbc:postgresql://localhost:5432/postgres")
+      .option("dbtable", "forbidden_areas")
+      .option("user", "postgres")
+      .option("password", "1234")
+      .load()
+
+    // Broadcast the forbidden areas DataFrame
+    val broadcastForbiddenAreas = broadcast(forbiddenAreasDF)
 
     // Read data from Kafka
     val kafkaDF = spark.readStream
       .format("kafka")
-      .option("kafka.bootstrap.servers", "localhost:9092")
+      .option("kafka.bootstrap.servers", "172.17.124.50:9092") // Remplacer par hostname -I sur WSL
       .option("subscribe", "my_topic")
       .option("startingOffsets", "earliest")
       .option("failOnDataLoss", "false")
@@ -28,28 +39,58 @@ object spark_streaming {
     val stringDF = kafkaDF.selectExpr("CAST(value AS STRING)").as[String]
 
     // Filter out the header row
-    val nonHeaderDF = stringDF.filter(row => !row.startsWith("latitude"))
+    val nonHeaderDF = stringDF.filter(row =>
+        !row.startsWith("user_id")
+          && !row.startsWith("id"))
+          /*&& !row.startsWith("firstname")
+          && !row.startsWith("location"))*/
 
-    // Split the CSV data and convert to DataFrame with GPSData case class
+    // Split the CSV data and convert to DataFrame with schema
+    // Sample of one row : "13,Collen,Gower,Collen.Gower@yopmail.com,firefighter, champs élysées ,15-07-2024, 02:07:00"
     val gpsDF = nonHeaderDF.map { row =>
-      val fields = row.toString().split(",")
-      (fields(0).toString, fields(1).toString, fields(2).toString, fields(3).toString, fields(4).toString, fields(5).toDouble, fields(6).toDouble, fields(7))
-    }.toDF("user_id", "first_name", "last_name", "email", "job", "latitude", "longitude", "timestamp")
+      val fields = row.split(",")
+      (
+        fields(0).toInt, // user_id
+        fields(1), // first_name
+        fields(2), // last_name
+        fields(3), // email
+        fields(4), // job
+        fields(5), // location ex : 'Paris'
+        fields(6) // date
+      )
+    }.toDF("user_id", "firstname", "lastname", "email", "job", "location", "date")
+    // Convert the date column to timestamp
+    val formattedDF = gpsDF.withColumn("date", to_timestamp(col("date"), "yyyy-MM-dd HH:mm:ss"))
+    // Transformation: Filter the DataFrame for users from a specific city, e.g., "Paris"
+    // Join with forbidden areas to filter the DataFrame
+    val filteredDF = formattedDF.join(broadcastForbiddenAreas, formattedDF("location") === broadcastForbiddenAreas("area"), "inner")
+      .select("user_id", "firstname", "lastname", "email", "job", "location", "date")
 
-    // Filter the DataFrame for users within the specified latitude and longitude range
-    //val filteredDF = gpsDF.filter($"latitude" >= 0 && $"latitude" <= 90 && $"longitude" >= 0 && $"longitude" <= 180)
-    val filteredDF = gpsDF.filter($"longitude" >= 0)
-    // || $"longitude" <= 180)
-    // || $"latitude" >= 0
+    // Function to write to PostgreSQL
+    def writeToPostgres(df: DataFrame, batchId: Long): Unit = {
+      df.write
+        .format("jdbc")
+        .option("url", "jdbc:postgresql://localhost:5432/postgres")
+        .option("dbtable", "alerte_utilisateur")
+        .option("user", "postgres")
+        .option("password", "1234")
+        .mode("append")
+        .save()
+    }
 
-    val query = filteredDF.writeStream
+    // Write the data to PostgreSQL using foreachBatch
+    val postgresQuery = filteredDF.writeStream
       .outputMode("append")
-      .format("csv")
-      .option("checkpointLocation", "src/main/scala/checkpoint")
-      .option("path", "src/main/scala/output")
+      .foreachBatch { (batchDF: DataFrame, batchId: Long) =>
+        /* FOR DEBUG PURPOSES ONLY  : */
+        //println(s"Batch ID: $batchId")
+        //batchDF.show(false)
+        /* FOR DEBUG PURPOSES ONLY */
+        writeToPostgres(batchDF, batchId)
+      }
+      .option("checkpointLocation", "src/main/scala/checkpoint_postgres")
       .start()
 
-
-    query.awaitTermination()
+    postgresQuery.awaitTermination()
   }
 }
